Add line and direction filters to departure endpoints
